# learn-flask

./: README.md  noxfile.py  pyproject.toml
learn_flask/: __init__.py
learn_flask/00_basic/: __init__.py  run.py  webapp.py
learn_flask/01_routing/: __init__.py  webapp.py
learn_flask/02_routing/: __init__.py
learn_flask/02_routing_rules/: __init__.py
learn_flask/03_html_escaping/: __init__.py  webapp.py
learn_flask/03_routing_rules/: __init__.py
learn_flask/04_html_escaping/: __init__.py
learn_flask/04_unique_urls_and_redirects/: __init__.py
learn_flask/05_http_methods/: __init__.py
learn_flask/05_unique_urls_and_redirects/: run.py
learn_flask/07_templates/: __init__.py
learn_flask/07_templates/templates/: hello.html  index.html
learn_flask/08_static_files/: __init__.py
learn_flask/08_static_files/static/css/: main.css
learn_flask/08_static_files/static/js/: main.js
learn_flask/08_static_files/templates/: index.html
src/00_simple_flask/: webapp.py
src/02_routing_rules/: webapp.py
tests/: test_examples.py
