[tool.poetry]
name = "learn-flask"
version = "0.1.0"
description = "Basics of Flask web servers."
authors = ["xransum <xransum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
