[tool.poetry]
name = "learn-flask"
version = "0.1.0"
description = "Basics of Flask web servers."
authors = ["xransum <xransum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^23.11.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.9.16"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
darglint = "^1.8.1"
isort = "^5.12.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
