[tool.poetry]
name = "learn-flask"
version = "0.1.0"
description = "Basics of Flask web servers."
authors = ["xransum <xransum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
01_basic = "learn_flask.01_basic.run:main"
02_routing = "learn_flask.02_routing.run:main"
03_routing_rules = "learn_flask.03_routing_rules.run:main"
04_html_escaping = "learn_flask.04_html_escaping.run:main"
05_unique_urls_and_redirects = "learn_flask.05_unique_urls_and_redirects.run:main"
06_http_methods = "learn_flask.06_http_methods.run:main"

[tool.poetry.dependencies]
python = ">=3.11,<4"
flask = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
nox = ">=2023.4.22"
nox-poetry = ">=1.0.3"
pytest = ">=7.4.3"
coverage = { extras = ["toml"], version = ">=6.3" }
flake8 = ">=6.1.0"
black = ">=23.11.0"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=23.9.16"
flake8-docstrings = ">=1.7.0"
flake8-rst-docstrings = ">=0.3.0"
# TODO: The 'python < 4' constraint is
#   a workaround to allow poetry to
#   generate a lock file. Hopefully
#   there's an alternative to darglint
#   before Python 4 is released.
darglint = { version = ">=1.8.1", python = "<4" }
isort = ">=5.10.1"
pep8-naming = ">=0.12.1"
pre-commit-hooks = ">=4.1.0"
furo = ">=2022.1.2"
Pygments = ">=2.11.2"
# TODO: Remove the 'python' constraint
#   once poetry drops its own constraint.
poetry = { version = ">=1.1.12", python = "<4" }
pytest-datadir = ">=1.3.1"
typing-extensions = ">=4.0.1"
pyupgrade = ">=2.31.0"
myst-parser = ">=0.16.1"
reorder-python-imports = ">=3.12.0"

[tool.coverage.paths]
source = ["learn_flask", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["learn_flask"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
